   - Ticket #180 - allow to colorize terminal output

0.0.10 2017.08.04
    - Little code and documentation clean
    - Ticket #201 - moved skeleton files into %?RESOURCES and added xt to be "integration tests" that run after installation
    - Ticket #224 - installation of Bailador as a dependency does not longer fail

0.0.9 2017.07.28
    - Ticket #208 - It is now possible to render without a content type, default values for content-types can be configured.
    - Ticket #116 - Added &to-json to be exported via Bailador
    - Ticket #214 - auto generated head routes didnt work properly for redirections
    - Ticket #215 - redirect() can set different status codes - 302 is the default
    - Ticket #216 - Bailador::Feature::AutoHead is in core and allways used
    - Ticket #194 - t/20-cli.t did not shut down processes properly

0.0.8 2017.07.15
    - Ticket #176 - Layered configuration file loading
    - Ticket #186 - added 'views' as default for bin/bailador watch
    - Ticket #203 - t/00-tidy.t avoids .precomp dir
    - Ticket #174 - Removed Bailador::import()
    - Ticket #169 - All paths are relative to Bailador::App $!location. Use %*ENV<BAILADOR_APP_ROOT> explicitly set it.
    - Improved logging speed - https://github.com/jsimonet/log-any/issues/1
    - Ticket #138 - Added a fancy output Bailador::Command::routes, use bin/bailador routes -t <app> 
    - Ticket #177 - Route matching on / or "end of URI" works better
    - Ticket #190 - Added syntactic suggar for static-dir routes
    - Ticket #189 - views directory is relative to where the application script is when it is in a directory called 'bin'. 
    - Ticket #196 - Pass arbitrary header to run-psgi-request

0.0.7 2017.07.04
    - Ticket #164 - bin/bailador version should work even after installation 
    - Ticket #98 - Added Bailador::Feature::AutoHead and added head() keyword to setup head routes manually
    - Named arguments to bin/bailador such as --config can now be anywhere