@@ -6,6 +6,6 @@
 [subrepo]
 	remote = git://github.com/Bailador/Bailador.git
 	branch = master
-	commit = 171ba61175199fa4a768af99ef5cdeeee48145cc
-	parent = af08e484486e7971508705171f7e03343dc1cda1
+	commit = 762c59fa62ceddaeee276585cf5c74c6805ef998
+	parent = e15cace07043ed68d678388cc812a31577be0e86
 	cmdver = 0.4.0
